--- a/package.json
+++ b/package.json
@@ -8,46 +8,53 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint --force",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "cypress:run": "npx cypress run",
+    "cypress:e2e": "start-test start http-get://localhost:4200 cypress:run",
+
+    "cy:open_dev" :"npx cypress open --env username=pacacierdogan@gmail.com,password=1234",
+    "cy:open_process" : "npx cypress open --env username=$DB_USERNAME,password=$PASSWORD"
   },
+
   "engines": {
     "node": "^14.20.0 || ^16.13.0 || ^18.10.0"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "15.2.3",
-    "@angular/common": "15.2.3",
-    "@angular/compiler": "15.2.3",
-    "@angular/core": "15.2.3",
-    "@angular/forms": "15.2.3",
-    "@angular/platform-browser": "15.2.3",
-    "@angular/platform-browser-dynamic": "15.2.3",
-    "@angular/router": "15.2.3",
+    "@angular/animations": "16.0.3",
+    "@angular/common": "16.0.3",
+    "@angular/compiler": "16.0.3",
+    "@angular/core": "16.0.3",
+    "@angular/forms": "16.0.3",
+    "@angular/platform-browser": "16.0.3",
+    "@angular/platform-browser-dynamic": "16.0.3",
+    "@angular/router": "16.0.3",
     "@rx-angular/cdk": "latest",
-    "@rx-angular/template": "^15.1.0",
-    "marked": "^4.2.12",
-    "node": "^20.1.0",
-    "rxjs": "^7.4.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "@rx-angular/template": "^15.2.0",
+    "marked": "^5.0.2",
+    "node": "^20.2.0",
+    "rxjs": "^7.8.1",
+    "tslib": "^2.5.2",
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.4",
-    "@angular/cli": "^15.2.4",
-    "@angular/compiler-cli": "15.2.3",
-    "@types/jasmine": "~4.3.0",
-    "@types/marked": "^4.0.8",
-    "cypress": "^12.12.0",
+    "@angular-devkit/build-angular": "^16.0.2",
+    "@angular/cli": "^16.0.2",
+    "@angular/compiler-cli": "16.0.3",
+    "@types/jasmine": "~4.3.1",
+    "@types/marked": "^5.0.0",
+    "cypress": "^12.13.0",
     "husky": "^8.0.3",
-    "jasmine-core": "~4.5.0",
-    "karma": "~6.4.1",
-    "karma-chrome-launcher": "~3.1.0",
+    "jasmine-core": "~5.0.0",
+    "karma": "~6.4.2",
+    "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
-    "typescript": "~4.8.2"
+    "start-server-and-test": "^2.0.0",
+    "typescript": "~5.0.4"
   },
   "lint-staged": {
     "*.{ts,html,css,json,md}": "prettier --write"
